syntax = "proto3";
package atk;


option go_package = "./proto";

enum CouponType {
  Sale = 0;
  Cancel = 1;
  Return = 2;
}

enum PaymentType {
  Unknown = 0;
  Cash = 1;
  CreditCard = 2;
  Voucher = 3;
  Cheque = 4;
  CryptoCurrency = 5;
  Other = 6;
}

message CouponItem {
  string Name = 1;
  int64 Price = 2;
  float Quantity = 3;
  string Unit = 4;
  int64 Total = 5;
  string TaxRate = 6;
  string Type = 7;
}

message Payment {
  PaymentType Type = 1;
  int64 Amount = 2;
}

message TaxGroup {
  string TaxRate = 1;
  int64 TotalForTax = 2;
  int64 TotalTax = 3;
}

message PosCoupon {
  uint64 BusinessId = 1;
  uint64 CouponId = 2;
  string Location = 3;
  string OperatorId = 4;
  uint64 PosId = 5;
  CouponType Type = 6;
  int64 Time = 7;
  repeated CouponItem Items = 8;
  repeated Payment Payments = 9;
  int64 Total = 10;
  repeated TaxGroup TaxGroups = 11;
  int64 TotalTax = 12;
  int64 TotalNoTax = 13;
}

message CitizenCoupon {
  uint64 BusinessId = 1;
  uint64 CouponId = 2;
  uint64 PosId = 3;
  CouponType Type = 4;
  int64 Time = 5;
  int64 Total = 6;
  repeated TaxGroup TaxGroups = 7;
  int64 TotalTax = 8;
}

message QrCoupon {
  uint64 BusinessId = 1;
  uint64 CouponId = 2;
  uint64 PosId = 3;
  CouponType Type = 4;
  int64 Time = 5;
  int64 Total = 6;
  repeated TaxGroup TaxGroups = 7;
  int64 TotalTax = 8;
}